--- a/content/backmatter.tex
+++ b/content/backmatter.tex
@@ -969,4 +969,25 @@ collectives.
 %
 \end{itemize}
 
+\chapter{Glossary}\label{sec:Glossary}
+
+$\;$
+
+$ $%
+\begin{tabular}{|>{\raggedright}p{0.3\textwidth}|>{\raggedright}p{0.6\textwidth}|}
+\hline 
+\textbf{Terms} & \textbf{Definitions}\tabularnewline
+\hline 
+\hline 
+Blocking & \tabularnewline
+\hline 
+Non-blocking & \tabularnewline
+\hline 
+Local Completion & \tabularnewline
+\hline 
+Remote Completion & \tabularnewline
+\hline 
+
+\end{tabular}
+
 %end of setlength command that was started in frontmatter.tex
