Use 'description' environment

--- a/content/backmatter.tex
+++ b/content/backmatter.tex
@@ -971,23 +971,13 @@ collectives.
 
 \chapter{Glossary}\label{sec:Glossary}
 
-$\;$
-
-$ $%
-\begin{tabular}{|>{\raggedright}p{0.3\textwidth}|>{\raggedright}p{0.6\textwidth}|}
-\hline 
-\textbf{Terms} & \textbf{Definitions}\tabularnewline
-\hline 
-\hline 
-Blocking & \tabularnewline
-\hline 
-Non-blocking & \tabularnewline
-\hline 
-Local Completion & \tabularnewline
-\hline 
-Remote Completion & \tabularnewline
-\hline 
-
-\end{tabular}
+\begin{description}
+\item[Local completion]
+\item[Remote completion]
+\item[Blocking]
+\item[Nonblocking]
+\item[Operation]
+\item[Routine]
+\end{description}
 
 %end of setlength command that was started in frontmatter.tex
